--- a/kubernetes/Vagrantfile
+++ b/kubernetes/Vagrantfile
@@ -5,6 +5,9 @@ Vagrant.configure("2") do |config|
     vb.cpus = 2
     vb.memory = "2048"
     vb.customize ['modifyvm', :id, '--nested-hw-virt', 'on']
+    #Network customisation to enable Internet access from Ubuntu
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
   end
 
   config.vm.provision "shell", path: "vagrant-install.sh"
