--- a/kubernetes/Vagrantfile
+++ b/kubernetes/Vagrantfile
@@ -1,10 +1,9 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/jammy64"
+  config.vm.box = "bento/ubuntu-22.04-arm64"
 
-  config.vm.provider "virtualbox" do |vb|
-    vb.cpus = 2
-    vb.memory = "2048"
-    vb.customize ['modifyvm', :id, '--nested-hw-virt', 'on']
+  config.vm.provider "parallels" do |prl|
+    prl.cpus = 2
+    prl.memory = 2048
   end
 
   config.vm.provision "shell", path: "vagrant-install.sh"
